kubernetes/addons/kube-cert-manager.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: kubernetes-cert-manager
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "Kubernetes-Cert-Manager"
    addonmanager.kubernetes.io/mode: Reconcile
  name: kubernetes-cert-manager
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: kubernetes-cert-manager
      name: kubernetes-cert-manager
    spec:
      containers:
        - name: kubernetes-cert-manager
          image: rosskukulinski/kube-cert-manager:0.5.0
          args:
            - "-data-dir=/var/lib/cert-manager"
            #- "-acme-url=https://acme-staging.api.letsencrypt.org/directory"
            # NOTE: the URL above points to the staging server, where you won't get real certs.
            # Uncomment the line below to use the production LetsEncrypt server:
            - "-acme-url=https://acme-v01.api.letsencrypt.org/directory"
            # You can run multiple instances of kube-cert-manager for the same namespace(s), 
            # each watching for a different value for the 'class' label
            #- "-class=default"
            # You can choose to monitor only some namespaces, otherwise all namespaces will be monitored
            #- "-namespaces=default,test"
            # If you set a default email, you can omit the field/annotation from Certificates/Ingresses
            - "-default-email=zhaw.srueg@mailhero.io"
            # If you set a default provider, you can omit the field/annotation from Certificates/Ingresses
            - "-default-provider=dnsimple"
          volumeMounts:
            - name: data
              mountPath: /var/lib/cert-manager
        - name: kubectl-proxy
          image: palmstonegames/kubectl-proxy:1.4.0
      volumes:
        - name: "data"
          emptyDir: {}
