kubernetes/addons/logging.yml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: fluentd-logging
  namespace: kube-system
  labels:
    k8s-app: fluentd-logging
    version: v1
    kubernetes.io/cluster-service: "true"
spec:
  template:
    metadata:
      labels:
        k8s-app: fluentd-logging
        version: v1
        kubernetes.io/cluster-service: "true"
    spec:
      containers:
      - name: fluentd
        image: quay.io/fluent/fluentd-kubernetes-daemonset
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
      terminationGracePeriodSeconds: 30
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      serviceAccountName: fluentd-logging
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-logging
  namespace: kube-system
  labels:
    k8s-app: elasticsearch-logging
    kubernetes.io/cluster-service: "true"
spec:
  template:
    metadata:
      labels:
        k8s-app: elasticsearch-logging
        kubernetes.io/cluster-service: "true"
    spec:
      containers:
      - name: elasticsearch-logging
        image: docker.elastic.co/elasticsearch/elasticsearch:5.3.2
        volumeMounts:
        - name: elasticsearch-config
          mountPath: /usr/share/elasticsearch/user-config
        - name: elasticsearch-data
          mountPath: /usr/share/elasticsearch/data
        resources:
          requests:
            cpu: "25m"
            memory: "2Gi"
          limits:
            cpu: "100m"
            memory: "2Gi"
        securityContext:
          privileged: true
        lifecycle:
            postStart:
              exec:
                command:
                  - ln
                  - -fs
                  - /usr/share/elasticsearch/user-config/elasticsearch.yml
                  - /usr/share/elasticsearch/config/elasticsearch.yml
        ports:
        - containerPort: 9200
        #readinessProbe:
        #  httpGet:
        #    path: /_cluster/health
        #    port: 9200
        #    scheme: HTTP
        #  initialDelaySeconds: 60
        #livenessProbe:
        #  httpGet:
        #    path: /_cluster/health
        #    port: 9200
        #    scheme: HTTP
        #  initialDelaySeconds: 60
      volumes:
      - name: elasticsearch-data
        persistentVolumeClaim:
          claimName: elasticsearch-logging
      - name: elasticsearch-config
        configMap:
          name: elasticsearch-logging-config
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-logging
  namespace: kube-system
  labels:
    k8s-app: elasticsearch-logging
    kubernetes.io/cluster-service: "true"
spec:
  selector:
    k8s-app: elasticsearch-logging
  ports:
  - port: 9200
    targetPort: 9200
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana-logging
  namespace: kube-system
  labels:
    k8s-app: kibana-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kibana-logging
  template:
    metadata:
      labels:
        k8s-app: kibana-logging
    spec:
      containers:
      - name: kibana-logging
        image: kibana:5.3
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
        #readinessProbe:
        #  httpGet:
        #    path: /api/status
        #    port: 5601
        #    scheme: HTTP
        #livenessProbe:
        #  httpGet:
        #    path: /api/status
        #    port: 5601
        #    scheme: HTTP
        #  initialDelaySeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-logging
  namespace: kube-system
  labels:
    k8s-app: kibana-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "Kibana"
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: ui
  selector:
    k8s-app: kibana-logging
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: registry
  namespace: kube-system
  labels:
    # let kube-cert-manager generate an SSL certificate
    stable.k8s.psg.io/kcm.class: "default"
  annotations:
    # type of authentication
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: dashboard-auth
    # message to display with an appropiate context why the authentication is required
    ingress.kubernetes.io/auth-realm: "Authentication Required - Kibana"
spec:
  tls:
  - hosts:
    - kibana.zhaw.tk
    secretName: kibana-tls-cert
  rules:
  - host: kibana.zhaw.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-logging
          servicePort: 5601
